--- a/index.html
+++ b/index.html
@@ -36,13 +36,9 @@
                       image-rendering: optimizeSpeed;
                       -webkit-interpolation-mode: nearest-neighbor;
                       -ms-touch-action: none;
-                      padding-left: 0;
-                      padding-right: 0;
-                      margin-left: auto;
-                      margin-right: auto;
-                      display: block;
-                      height: 100%;
-                      width: 177.77vh;
+                      margin: 0px;
+                      padding: 0px;
+                      border: 0px;
             }
             :-webkit-full-screen #canvas {
                  width: 100%;
@@ -50,11 +46,9 @@
             }
             div.gm4html5_div_class
             {
-             position: fixed;
-             left: 50%;
-             margin-left: calc(-177.77vh/2);
-             height: 100%;
-             width: 177.77vh;
+              margin: 0px;
+              padding: 0px;
+              border: 0px;
             }
             /* START - Login Dialog Box */
             div.gm4html5_login
